# curve-editor

./: .gitmodules  CMakeLists.txt
include/: mainWin.h  track.h  trackManager.h  trackRenderer.h
source/: main.cpp
src/: main.cpp  mainWin.cpp  track.cpp  trackManager.cpp  trackRenderer.cpp
